/*
 * This protobuf file contains the definitions of all the calls and messages
 * used by drand nodes themselves to create the distributed randomness beacon.
 */ 
syntax = "proto3";

package beacon;

option go_package = "github.com/dedis/drand/protobuf/beacon";

// BeaconAPI holds the relevant calls to create a distributed key with the
// participants and to create new publicly verifiable randomness.
service Beacon {

   rpc NewBeacon(BeaconPacket) returns (BeaconResponse);

}

// BeaconPacket  holds a link to a previous signature, a timestamp and the
// partial signature for this beacon. All participants send and collects many of
// theses partial beacon packets to recreate locally one beacon
message BeaconPacket {
    bytes previous_sig = 1;
    uint64 timestamp = 2;
    bytes partial_sig = 3;
}

message BeaconResponse {

}
