/*
 * This protobuf file contains the definition of the public API endpoints as
 * well as messages. All client implementations should use this reference
 * protobuf to implement a compatible drand client.
 */
syntax = "proto3";

package drand;

option go_package = "github.com/dedis/drand/protobuf/drand";

import "crypto/element.proto";

service Randomness {
    rpc Public(PublicRandRequest) returns (PublicRandResponse) {}
    rpc Private(PrivateRandRequest) returns (PrivateRandResponse) {}
}


// PublicRandRequest requests a public random value that has been generated in a
// unbiasable way and verifiable.
message PublicRandRequest {
    // timestamp identifies the requested randomness. If it is equals to 0, the
    // response should return the latest public randomness avaiable.
    uint64 timestamp = 1;
}

// PublicRandResponse holds a signature which is the random value. It can be
// verified thanks to the distributed public key of the nodes that have ran the
// DKG protocol and is unbiasable. The message to the signature verification
// routine is "previous_sig  || timestamp".
message PublicRandResponse {
    bytes previous_sig = 1;
    uint64 timestamp = 2;
    bytes signature = 3;
}

// PrivateRandRequest is the message to send when requesting a private random
// value.
message PrivateRandRequest {
    // Request must contains a public key towards which to encrypt the private
    // randomness.
    ECIESObject request = 1;
}

message PrivateRandResponse {
    // Response contains the private randomness encrypted towards the client's
    // request key.
    ECIESObject response = 1;
}

message ECIESObject {
    element.Point ephemeral = 1;
    bytes ciphertext = 2;
    bytes nonce = 3;
}
